Added processed files by multilingual script

--- a/additional_content/degree_project.MULTILINGUAL.html
+++ b/additional_content/degree_project.MULTILINGUAL.html
@@ -102,10 +102,10 @@
 <p>
 @en  In order to accomplish this project I got assistance from my supervisor, Antonio Tabernero, and
 @es  Para poder llevar a cabo este proyecto tuve la ayuda de mi supervisor Antonio Tabernero and
-  <a href="http://picfernalia.blogspot.com.es/">
-@en  one of his blogs.
-@es  uno de sus blogs.
-  </a>,
+
+@en  <a href="http://picfernalia.blogspot.com.es/">one of his blogs</a>,
+@es  <a href="http://picfernalia.blogspot.com.es/">uno de sus blogs</a>,
+
 @en  If someone is interested in learning about microcontrollers (and knows Spanish), I completely recommend
 @en  that Blogspot as a starting point to dive in the embedded systems field.
 @es  Si alguien está interesado en aprender acerca de microcontroladores, recomiendo totalmente el Blogspot
@@ -115,10 +115,10 @@
 <p>
 @en  The documentation (in Spanish) about that project, which was my undergraduate thesis, is available in the
 @es  La documentación del proyecto, el cual fue mi proyecto fin de grado, está disponible en la
-  <a href="http://oa.upm.es/43463/">
-@en    official library of the UPM
-@es    biblioteca oficial de la UPM
-  </a>.
+
+@en  <a href="http://oa.upm.es/43463/">official library of the UPM</a>.
+@es    <a href="http://oa.upm.es/43463/">biblioteca oficial de la UPM</a>.
+
 @en  The code is available in
 @es  El código está disponible en
   <a href="https://bitbucket.org/MarcosBernal/">bitbucket</a>.
