--- a/additional_content/openhacknice.MULTILINGUAL.html
+++ b/additional_content/openhacknice.MULTILINGUAL.html
@@ -20,10 +20,10 @@
 <p>
 @en    I heard about a
 @es    Escuché sobre una
-    <a href="https://projects.tmforum.org/wiki/display/API/Open+Hack+TM+Forum+Live+Nice+2017">
-@en      Open API competition called OpenHack
-@es      competición de APIs llamada OpenHack
-    </a>,
+
+@en   <a href="https://projects.tmforum.org/wiki/display/API/Open+Hack+TM+Forum+Live+Nice+2017">Open API competition called OpenHack</a>,
+@es   <a href="https://projects.tmforum.org/wiki/display/API/Open+Hack+TM+Forum+Live+Nice+2017">competición de APIs llamada OpenHack</a>,
+
 @en    held by TMForum and hosted in the city center of Nice. The Open API competition was about developing a solution using any
 @en    APIs (Application Protocol Interface) offered by different sponsors like Salesforce, Vodafone, Huawei, City of Nice and the own TMForum.
 @es    organizada por TMForum y celebrada en el centro de Niza. La competición trataba sobre el desarrollo software mediante el uso
@@ -44,7 +44,7 @@
 @en    I started to ask randomly different groups and individuals to join them, eventually I met another Spaniard and we set up
 @en    a team with other 3 people. Each of us had a different profile and we built up an exciting team, which was called RHIME due
 @en    our given name initials (Ronan, Hugo, Ignacio, Marcos and Eman).
-@es    Una vez dentro del Acrópolis de Niza, me encontré con más gente de la que esperaba. No conocía a nadia previamente, así que empecé
+@es    Una vez dentro del Acrópolis de Niza, me encontré con más gente de la que esperaba. No conocía a nadie previamente, así que empecé
 @es    a preguntar aleatoriamente a diferentes grupos e individuos para unirme a ellos. Eventualmente, conocí a otro español y nos juntamos
 @es    con otras tres personas. Cada uno tenía un perfil distinto y logramos formar un grupo interesante al cual llamamos RHIME, en base a
 @es    nuestras iniciales (Ronan, Hugo, Ignacio, Marcos and Eman).
@@ -59,7 +59,7 @@
 @en    We were learning which APIs we can used to build our solution and how to use the Salesforce platform to connect the
 @en    different providers. Moreover, we discovered tools such as
 @es    Estuvimos aprendiendo que APIs podíamos usar para construir nuestra solución y como utilizar la plataforma de Salesforce
-@es    para conectar a los distintos proveedores.
+@es    para conectar a los distintos proveedores. Además descrubrimos herramientas como
     <a href="https://www.getpostman.com/">Postman</a>
 @en    or
 @es    o
@@ -75,37 +75,36 @@
 
 <p>
 @en    The idea we worked on was about addressing city issue management with the gamificated assistance of citizens. The platform
-@en    was connected with the users by any social network, in our cased we used twitter. We decided to use the IoT and ticket
+@en    was connected with the users through twitter, although it could be done with any other social network. We decided to use the IoT and ticket
 @en    handling of Salesforce, with Huawei and Vodafone APIs to manage the drones and the user accounts. In addition, we added in
 @en    the demo an integration with google cloud AI to pre-analyse the images received from the drone (setting the priority and
 @en    some labels related to the case i.e. fire or massive flooding).
 @es    La idea en la que trabajamos fue acerca de solucionar problemas en zonas urbanas mediante la ayuda gamificada de los ciudadanos.
-@es    La plataforma estaba conectada con los usuarios mediante una red social, en nuestra demo usamos twitter. Respecto a las APIs,
+@es    La plataforma estaba conectada con los usuarios mediante Twitter, aunque podía haber sido hecho con cualquier otra red social. Respecto a las APIs,
 @es    decidimos usar IoT y control de tickets de Salesforce junto con las API de Huawei y vodafone para el control de drones y cuentas de
 @es    usuario. Además añadimos una integración con la IA de google cloud para pre-analizar las imágenes recibidas por el dron
 @es    (estableciendo la prioridad y contexto del problema abierto previamente por el ciudadano)
     <br /><br />
-@en    On the morning of 16th May we prepared a pitch and some hours later we pitched in front of the jury, rest of the
+@en    On the morning of 16th May we prepared a pitch and some hours later we pitched in front of the jury, rest of
 @en    participants and other visitors that decided to see the final results. There were good ideas and demos. For instance
 @en    there was a system that used drones to control pollution in ports, a system made by local students to pay by using sim
 @en    or a system that managed the water use in green places with a tensorflow neural network.
 @es    Durante la mañana del 16 de mayo preparamos una presentación y varias horas más tarde lo defendimos en frente del jurado, el resto
-@es    de los participantes, y otros visitantes que decidieron ver la fase final. Hubieron ideas y demos muy interesantes. Por ejemplo,
-@es    había la gestión de drones a través de un sistema que controlaba la contaminación en puertos, un sistema para pagar con el móvil a través de
+@es    de participantes, y otros visitantes que decidieron ver la fase final. Hubieron ideas y demos muy interesantes. Por ejemplo,
+@es    un sistema que controlaba la contaminación en puertos mediante drones, un sistema para pagar con el móvil a través de
 @es    la sim o una plataforma que controlaba la gestión del agua en zonas verdes con una red neuronal.
     <br /><br />
 @en    After the jury deliberation, they considered that we created a very successful demo and they awarded us with
 @en    three out of six prizes. Including
 @es    Trás el debate del jurado, se determinó que habíamos creado una solución muy interesante y nos premiaron con
 @es    tres premios de los 6 que había. Incluyendo
-    <a href="https://www.tmforumlive.org/open-hack-nice/">
-@en      2nd place
-@es      2do lugar
-    </a>,
-    <a href="https://twitter.com/Abhi_Sur/status/864811449696124928">
-@en      Salesforce special award
-@es      premio especial de Salesforce
-    </a>
+
+@en    <a href="https://www.tmforumlive.org/open-hack-nice/">2nd place</a>,
+@es    <a href="https://www.tmforumlive.org/open-hack-nice/">2do lugar</a>,
+
+@en    <a href="https://twitter.com/Abhi_Sur/status/864811449696124928">Salesforce special award</a>
+@es    <a href="https://twitter.com/Abhi_Sur/status/864811449696124928">premio especial de Salesforce</a>
+
 @en    and Huawei special award (invitation to HCE in Berlin).
 @es    y premio especial de Huawei (invitación al HCE en Berlin)
     <br /><br />
