--- a/additional_content/summerschoolmunich.MULTILINGUAL.html
+++ b/additional_content/summerschoolmunich.MULTILINGUAL.html
@@ -17,10 +17,10 @@
 @es    Verano de 2017, había decidido ir al summer school de TUM (Technische Universität München).
 @es    El tema del summer school era producción descentralizada que en mi caso estuvo relacionado con impresión 3D o,
 @es    como lo llaman los expertos,
-    <a href="https://www.eos.info/additive_manufacturing">
-@en      additive manufacturing
-@es      fabricación aditiva
-    </a>.
+
+@en <a href="https://www.eos.info/additive_manufacturing">additive manufacturing</a>.
+@es <a href="https://www.eos.info/additive_manufacturing">fabricación aditiva</a>.
+
 </p>
 <img src="imgs/summer_school/everyone_front_tum.jpg" alt="
 @en  All participants in front of school building
@@ -32,9 +32,7 @@
 @es    Fueron dos semanas intensas donde aprendí muchas cosas y conocí a gente muy interesante. Fuimos 35 estudiantes
 @es    de todas las partes del mundo, y fuimos separados en grupos de 4 para trabajar en diferentes escenarios de uso. El summer school
 @es    estuvo orientado al uso de
-    <a href="https://leanservicecreation.com/">
-      lean service creation
-    </a>
+    <a href="https://leanservicecreation.com/">lean service creation</a>
 @en     mentored by
 @es     mentorizado por
      <a href="">Futurice</a>,
@@ -55,9 +53,9 @@
 @es    y justificada con un plan de negocios y una defensa del mismo en frente de EOS, otras compañías y el resto de los grupos.
 @es    Durante las dos semanas estuvimos trabajando duro todos los días, aunque también hubo tiempo para otras actividades.
 @es    En mi tiempo libre visité el centro de la ciudad y el
-    <a href="http://www.deutsches-museum.de/en/collections/">Deutsches Museum</a>
-@en    , which contains material of all or almost all science fields but if you look for something specific and deep you could not get satisfied.
-@es    , el cual contiene exposiciones sobre todos o casi todos los campos de la ciencia aunque si buscas algo especificamente
+    <a href="http://www.deutsches-museum.de/en/collections/">Deutsches Museum</a>,
+@en    which contains material of all or almost all science fields but if you look for something specific and deep you could not get satisfied.
+@es    el cual contiene exposiciones sobre todos o casi todos los campos de la ciencia aunque si buscas algo especificamente
 @es    y en detalle puedes no quedarte satisfecho ya que es una visión a alto nivel de la mayoria de los campos.
     <br /><br />
 @en    Perhaps the most exciting social activity was to build a raft and, afterwards, make a rafting race in the Spitzingsee lake.
@@ -73,10 +71,9 @@
 <p>
 @en    Our day to day was to going forward with a concept or more specifically to create a solution. We create an account for
 @es    Nuestro día a día consistía en avanzar y dar forma a un concepto/solución ubicado en el contexto que nos dío EOS. Creamos una cuenta para
-    <a href="https://twitter.com/EOS_nimbus/status/894848203039944704">
-@en      occasional feed
-@es      informar ocasionalmente
-    </a>.
+
+@en <a href="https://twitter.com/EOS_nimbus/status/894848203039944704">occasional feed</a>.
+@es <a href="https://twitter.com/EOS_nimbus/status/894848203039944704">informar ocasionalmente</a>.
     <br /><br />
 @en    We performed several interviews with different players, such as Wärtsilä, Mercuris, Shapeways, and 3DBear as well as
 @en    educational institutions like AAlto University or some executives of EOS. Almost at the end of the week,
@@ -95,10 +92,10 @@
 @en    presented properly. As one of the most intelligent minds said once, we prepare the
 @es    Los últimos dos días estuvimos trabajando en la defensa porque, aunque casi todo el trabajo estaba hecho, había que
 @es    presentarlo correctamente. Como una de las mentes más brillantes dijo una vez, preparamos una
-    <a href="https://docs.google.com/presentation/d/1P8Ckiu7l64dJQIIBrj7u9c7JwYHPEnrugejz4RCK2Vo/edit?usp=sharing">
-@en      slides
-@es      presentación
-    </a>
+
+@en <a href="https://docs.google.com/presentation/d/1P8Ckiu7l64dJQIIBrj7u9c7JwYHPEnrugejz4RCK2Vo/edit?usp=sharing">slides</a>
+@es <a href="https://docs.google.com/presentation/d/1P8Ckiu7l64dJQIIBrj7u9c7JwYHPEnrugejz4RCK2Vo/edit?usp=sharing">presentación</a>
+
 @en    as simple as possible but not simpler. And in the midday of 11th August, we pitched.
 @es    tan sencilla como nos fue posible pero no más simple. Y en el mediodía del 11 de Agosto, presentamos nuestra idea.
 </p>
