--- a/index.MULTILINGUAL.html
+++ b/index.MULTILINGUAL.html
@@ -65,7 +65,7 @@
 <noscript>
     <div class="noscriptmsg" style="background-color: red; font-size: large; font-weight: bold; text-align: center; border: 5px solid yellow;">
 @en        Why don't you ENABLE JavaScript??  Not only design and content will be better, but also some features...
-@es        ¿¿Por qué no ACTIVAS JavaScript??  No solo el diseño y el contenido es mejor, sino que algunas características...
+@es        ¿¿Por qué no ACTIVAS JavaScript??  No sólo el diseño y el contenido es mejor, sino que algunas características...
     </div>
 </noscript>
 
@@ -180,7 +180,7 @@
                 </p>
                 <p>
 @en                  In this space, I will attach all kind of projects. Why do not you take a look? maybe one of them gets your attention.
-@es                  Aquí referenciare proyectos de todo tipo. Quizas alguno llama tu atencion, ¿por qué no le echas un vistazo?
+@es                  Aquí referenciaré proyectos de todo tipo. Quizás alguno llama tu atención, ¿por qué no le echas un vistazo?
                 </p>
                 </div>
                 <div class="_box_container _reacting_infobox">
@@ -233,7 +233,7 @@
                 </p>
                 <p>
 @en                  Here you should find short articles containing my opinion as well as some experiences that may be worthy to share.
-@es                  Aquí encontraras pequeñas experiencias que creo que son lo suficientemente interesantes para ser contadas.
+@es                  Aquí encontrarás pequeñas experiencias que creo que son lo suficientemente interesantes para ser contadas.
                 </p>
                 </div>
                 <div class="_box_container _reacting_infobox">
@@ -337,7 +337,7 @@
 @en                        When I am not working nor developing/researching projects on my own, I like to hang out with friends, play some video games and do all kind of sports.
 @en                        Particularly, I love hockey and the one that I play is Field Hockey.
 @en                        Field hockey is usually misunderstood with the other variants of hockey i.e. Ice Hockey or Roller Hockey which are quite different.
-@es                        Cuando no estoy trabajando o desarrollando algún proyecto por mi cuenta, me gusta quedar con mis colegas, jugar a algun videojuego y practicar todo tipo
+@es                        Cuando no estoy trabajando o desarrollando algún proyecto por mi cuenta, me gusta quedar con mis colegas, jugar a algún videojuego y practicar todo tipo
 @es                        de deportes, especialmente, el hockey. Entre las diferentes variantes el que practico es hockey hierba.
 @es                        Normalmente, el hockey hierba es confundido con las otras variantes ej. hockey hielo o hockey sobre patines los cuales son muy diferentes.
                     </p>
@@ -365,7 +365,7 @@
         <noscript>
             <div class="noscriptmsg" style="background-color: red; font-size: large; font-weight: bold; text-align: center; border: 5px solid yellow;">
 @en        Why don't you ENABLE JavaScript??  Not only design and content will be better, but also some features...
-@es        ¿¿Por qué no ACTIVAS JavaScript??  No solo el diseño y el contenido es mejor, sino que algunas características...
+@es        ¿¿Por qué no ACTIVAS JavaScript??  No sólo el diseño y el contenido es mejor, sino que algunas características...
             </div>
         </noscript>
 
@@ -426,7 +426,7 @@
 @es                   Gracias,
                      <div id="firstname"></div><br /><br />
 @en                   I will reply you in less than 48 hours. <br /> Nevertheless, if you need urgent contact, please use
-@es                   Tendras tu respuesta en unas 48 horas. <br /> Sin embargo, si necesitas un contacto urgente, contact conmigo a traves de
+@es                   Tendrás tu respuesta en unas 48 horas. <br /> Sin embargo, si necesitas un contacto urgente, contacta conmigo a través de
                      <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-hover-opacity">
                        linked<i class="fa fa-linkedin"></i>
                      </a> <br /><br />
