--- a/index.es.html
+++ b/index.es.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head prefix="og: https://ogp.me/ns#">
 
     <!-- RDFa tags-->
     <meta property='og:title' content="Marcos Bernal España" />
     <meta property="og:site_name" content="Personal Website">
-    <meta property="og:description" content="Personal website. Sharing a small piece of me to the world." />
-
+   <meta property="og:description" content="Página web personal. Compartiendo un pedazo de mí con el mundo." />
 
     <title>
      Página personal de Marcos Bernal
@@ -14,7 +13,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Marcos Bernal España" />
-    <meta name="description" content="Personal website. Sharing a small piece of me to the world." />
+   <meta name="description" content="Página web personal. Compartiendo un pedazo de mí con el mundo." />
     <meta name="keywords"  content="personal website, CV, marcos, bernal, contact, email" />
     <meta name="Resource-type" content="Document" />
 
@@ -61,7 +60,7 @@
 <!-- If javascript is not enabled, warning the user -->
 <noscript>
     <div class="noscriptmsg" style="background-color: red; font-size: large; font-weight: bold; text-align: center; border: 5px solid yellow;">
-       ¿¿Por qué no ACTIVAS JavaScript??  No solo el diseño y el contenido es mejor, sino que algunas características...
+       ¿¿Por qué no ACTIVAS JavaScript??  No sólo el diseño y el contenido es mejor, sino que algunas características...
     </div>
 </noscript>
 
@@ -78,7 +77,7 @@
          Experiencia
         </a>
         <a href="#AboutMe" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i>
-          Sobre mi
+          Acerca de mí
          </a>
         <a href="#Contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
           Contacto
@@ -101,7 +100,7 @@
          Experiencia
             </a>
             <a href="#AboutMe"><i class="fa fa-user"></i>
-             Sobre mi
+             Acerca de mí
             </a>
             <a href="#Contact"><i class="fa fa-envelope"></i>
           Contacto
@@ -159,7 +158,7 @@ Acepto
                  Ahora mismo esta un poco vacío, pero espera un poco ¡que hay varios proyectos en desarrollo!
                 </p>
                 <p>
-                 Aquí referenciare proyectos de todo tipo. Quizas alguno llama tu atencion, ¿por qué no le echas un vistazo?
+                 Aquí referenciaré proyectos de todo tipo. Quizás alguno llama tu atención, ¿por qué no le echas un vistazo?
                 </p>
                 </div>
                 <div class="_box_container _reacting_infobox">
@@ -209,7 +208,7 @@ Acepto
                   Bueno, te presento my pseudo-blog.
                 </p>
                 <p>
-                 Aquí encontraras pequeñas experiencias que creo que son lo suficientemente interesantes para ser contadas.
+                 Aquí encontrarás pequeñas experiencias que creo que son lo suficientemente interesantes para ser contadas.
                 </p>
                 </div>
                 <div class="_box_container _reacting_infobox">
@@ -298,7 +297,7 @@ Acepto
                        en varios problemas fáciles de afrontar!
                     </p>
                     <p id="about_text4">
-                       Cuando no estoy trabajando o desarrollando algún proyecto por mi cuenta, me gusta quedar con mis colegas, jugar a algun videojuego y practicar todo tipo
+                       Cuando no estoy trabajando o desarrollando algún proyecto por mi cuenta, me gusta quedar con mis colegas, jugar a algún videojuego y practicar todo tipo
                        de deportes, especialmente, el hockey. Entre las diferentes variantes el que practico es hockey hierba.
                        Normalmente, el hockey hierba es confundido con las otras variantes ej. hockey hielo o hockey sobre patines los cuales son muy diferentes.
                     </p>
@@ -325,7 +324,7 @@ Acepto
         <!-- If javascript is not enabled, warning the user -->
         <noscript>
             <div class="noscriptmsg" style="background-color: red; font-size: large; font-weight: bold; text-align: center; border: 5px solid yellow;">
-       ¿¿Por qué no ACTIVAS JavaScript??  No solo el diseño y el contenido es mejor, sino que algunas características...
+       ¿¿Por qué no ACTIVAS JavaScript??  No sólo el diseño y el contenido es mejor, sino que algunas características...
             </div>
         </noscript>
 
@@ -380,7 +379,7 @@ Acepto
                    <p>
                   Gracias,
                      <div id="firstname"></div><br /><br />
-                  Tendras tu respuesta en unas 48 horas. <br /> Sin embargo, si necesitas un contacto urgente, contact conmigo a traves de
+                  Tendrás tu respuesta en unas 48 horas. <br /> Sin embargo, si necesitas un contacto urgente, contacta conmigo a través de
                      <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-hover-opacity">
                        linked<i class="fa fa-linkedin"></i>
                      </a> <br /><br />
