--- a/additional_content/tadhackmadrid.MULTILINGUAL.html
+++ b/additional_content/tadhackmadrid.MULTILINGUAL.html
@@ -25,7 +25,7 @@
 @en    at 10:00 am and finished at 2:00 pm on the following day.
 @es    El evento fue patrocinado por distintas compañías tales como APIFONICA, Temasys o Telestax y fue organizado en la escuela de
 @es    telecomunicaciones de la UPM, ETSIT. El hackaton duro algo menos de dos días, de hecho, fueron unas 28 horas de trabajo potencial
-@es    pues el evento empezo a las 10 de la mañana y acabo a las 2 del mediodía del dia siguiente.
+@es    pues el evento empezo a las 10 de la mañana y acabó a las 2 del mediodía del día siguiente.
 </p>
 <img width="480" height="320" src="imgs/tadhackmadrid/team_work.jpg" alt="
 @en Working as a team in the TADHack, with Guliz and Santiago
@@ -36,7 +36,7 @@
 @en    The idea we worked on was assisting people by sending the last stored location to their trustee contacts when an emergency or disaster happens.
 @en    We made use of a LAMP server, developed some php code and run the code in a virtual box of the server of Santiago.
 @es    La idea en la que trabajamos era ayudar a gente que estuviese en apuros enviando la última localización almacenada a los contactos de confianza
-@es    cuando surgiese una emergencia o problema. Hicimos uso de un servidor de LAMP, desarrollamos un poco de código de php y pusimos en marcha una maquina
+@es    cuando surgiese una emergencia o problema. Hicimos uso de un servidor de LAMP, desarrollamos un poco de código de php y pusimos en marcha una máquina
 @es    virtual en un servidor de Santiago.
 </p>
 
@@ -46,7 +46,7 @@
 <p>
 @en    Even though we got a functional demo, we would like to produce the next version of it. So in some months, we will reach the next stage and
 @en    I will update this entry, adding more information.
-@es    Aunque tuvimos una demo funcional nos gustaría sacar una versión más avanzada de la misma. En unos pocos meses, pasaremos a la siguiente version
+@es    Aunque tuvimos una demo funcional nos gustaría sacar una versión más avanzada de la misma. En unos pocos meses, pasaremos a la siguiente versión
 @es    y actualizaré esta entrada añadiendo más información.
 </p>
 
