Added version and arrow to make it more intuitive

--- a/index.MULTILINGUAL.html
+++ b/index.MULTILINGUAL.html
@@ -160,9 +160,12 @@
                 </div>
             </div>
         </div>
-        <div id="version_overview">
-
+        <div id="arrow_marker">
+            <div class="w3-third no_small_screen"><i class="fa fa-arrow-down fa-2x"></i></div>
+            <div class="w3-third"><i class="fa fa-arrow-down fa-3x"></i></div>
+            <div class="w3-third no_small_screen"><i class="fa fa-arrow-down fa-2x"></i></div>
         </div>
+        <div id="version_overview">v1.0</div>
     </div>
 
 <!--+++++++++++++ Experience ++++++++++++++++++++++++++++-->
