--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
 ++++++++++++++++++++++ Nav Menu(Content) +++++++++++++++++++++++++++++++++++++
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
 <div class="w3-black" id="nav_menu">
-    <div class="aux_black_bar"></div>
     <div class="w3-bar">
         <a href="#nav_menu" class="w3-bar-item w3-button"><i class="fa fa-home"></i>
          Welcome
@@ -89,24 +88,25 @@
         <i class="w3-bar-item w3-button w3-hide-small w3-right lang spanish_lang"><img src="imgs/flag-of-spain.jpg" alt="Spanish language - flag of spain"></i>
         <i class="w3-bar-item w3-button w3-hide-small w3-right lang english_lang"><img src="imgs/flag-of-english.jpg" alt="English language - flag of UK/US"></i>
     </div>
-
-    <div class="responsive_menu hidden">
-        <button class="dropdown_button"></button>
-        <div id="myDropdownNav" class="dropdown_button-content">
-            <a href="#nav_menu"><i class="fa fa-home"></i>
+    <div class="aux_black_bar">
+      <div class="responsive_menu">
+          <button class="dropdown_button"></button>
+          <div id="myDropdownNav" class="dropdown_button-content">
+              <a href="#nav_menu"><i class="fa fa-home"></i>
          Welcome
-            </a>
-            <a href="#Experience"><i class="fa fa-th"></i>
+              </a>
+              <a href="#Experience"><i class="fa fa-th"></i>
          Experience
-            </a>
-            <a href="#AboutMe"><i class="fa fa-user"></i>
+              </a>
+              <a href="#AboutMe"><i class="fa fa-user"></i>
              About me
-            </a>
-            <a href="#Contact"><i class="fa fa-envelope"></i>
+              </a>
+              <a href="#Contact"><i class="fa fa-envelope"></i>
           Contact
-            </a>
+              </a>
         <a class="lang spanish_lang"><i class="fa fa-language"></i> Español </a>
-        </div>
+          </div>
+      </div>
     </div>
 </div>
 
