--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Accept
 
 
 <!--+++++++++++++ Welcome ++++++++++++++++++++++++++++-->
-    <div class="w3-container w3-padding-64" id="Welcome">
+    <div class="w3-padding-64" id="Welcome">
         <div class="w3-row-padding w3-padding-32" style="margin-left: 5%; margin-right: 5%;">
             <div class="w3-container w3-black welcome_text">
                 <div class="text_centered">
